--- a/app/views/index.html
+++ b/app/views/index.html
@@ -85,6 +85,47 @@
 		<div class="spacer"></div>
 		<div class="spacer"></div>
 		<div class="spacer"></div>
+
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+
+		<h1 style= "text-align: center;">Achievements</h1>
+
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+
+		<div class = "row oneColumnMargin">
+
+			<div class = "col-sm-4">
+				<div class="spacer"></div>
+				<img src = "/images/icons/gears.svg" style = "height: 100px;">
+				<div class="spacer"></div>
+				<h2>Automatic Computing Engine</h2>
+				<small>A groundbreaking blueprint for store-program computers. Though a complete version of the ACE was never built, its concept has been used as a model by tech corporations worldwide for several years</small>
+			</div>
+			<div class = "col-sm-4">
+				<div class="spacer"></div>
+				<img src = "/images/icons/AI.svg" style = "height: 100px;">
+				<div class="spacer"></div>
+				<h2>Turing Test</h2>
+				<small>He first addressed the issue of artificial intelligence in his 1950 paper, "Computing machinery and intelligence". If an AI can convice a human that is it human, it should be considered intelligent.</small>
+			</div>
+			<div class = "col-sm-4">
+				<div class="spacer"></div>
+				<img src = "/images/icons/bowl.svg" style = "height: 100px;">
+				<div class="spacer"></div>
+				<h2>Turing Award</h2>
+				<small>The highest acheivable award in the field of computer science. Named after Alan Turing for his grand contributions and is equivalent to the Noble Prize.</small>
+			</div>
+		</div>
+
+		<div class="spacer"></div>
+		<div class="spacer"></div>
+		<div class="spacer"></div>
 		<div class="spacer"></div>
 		<div class="spacer"></div>
 		<div class="spacer"></div>
@@ -97,12 +138,12 @@
 
 		<div class="masonry oneColumnMargin">
             <div class="spacer"></div>
-            <div data-aos ="fade-up" >
+            <div data-aos ="zoom-in" >
 			<div class="item">
 				<img class="card-img" src="/images/cards/2.png" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item p-3 text-right" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">I propose to consider the question, 'Can machines think?</h2>
@@ -112,43 +153,43 @@
 				</blockquote>
 			</div>
             </div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/machine.png">
 			</div>
             </div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/3.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/4.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/7.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/6.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item text-center">
 					<img class="card-img" src="/images/cards/5.jpg">
 			</div>
             </div>
 			<div class = "spacer"></div>
-			<div data-aos ="fade-up">
+			<div data-aos ="zoom-in">
 			<div  class="item">
 				<img class="card-img" src="/images/cards/1.jpg" alt="Card image">
 			</div>
 			</div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item p-3 text-left" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.</h2>
@@ -158,12 +199,12 @@
 				</blockquote>
             </div>
 			</div>
-			<div data-aos ="fade-up" >
+			<div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/moviePoster.jpg" alt="Card image cap">
 			</div>
             </div>
-            <div data-aos ="fade-up" >
+            <div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/turing2.jpg" alt="Card image cap">
 			</div>
