animated scrolling only plays once now

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -51,9 +51,9 @@
 	<section id = "secondPage" style="display: none;">
 		<div class="spacer"></div>
 		<div class="spacer"></div>
-		<div class="spacer"></div>
+		<div id = "refreshAOS" class="spacer"></div>
 
-		<div id = "refreshAOS" class = "row oneColumnMargin">
+		<div class = "row oneColumnMargin">
 			<div class = "col-sm-6 verticalParent">
 				<h1 class = "giantText alignRight verticalChild" style="color: blue; opacity: 1;text-align: right;">"We can only see a short distance ahead, but we can see plenty there that needs to be done."<br><span class = "smallGrey">-Alan Turing</span></h1>
 
@@ -138,12 +138,12 @@
 
 		<div class="masonry oneColumnMargin">
             <div class="spacer"></div>
-            <div data-aos ="zoom-in" >
+            <div data-aos ="zoom-in"  >
 			<div class="item">
 				<img class="card-img" src="/images/cards/2.png" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item p-3 text-right" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">I propose to consider the question, 'Can machines think?</h2>
@@ -153,43 +153,43 @@
 				</blockquote>
 			</div>
             </div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item">
 				<img class="card-img" src="/images/machine.png">
 			</div>
             </div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/3.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/4.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/7.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/6.jpg" alt="Card image">
 			</div>
             </div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item text-center">
 					<img class="card-img" src="/images/cards/5.jpg">
 			</div>
             </div>
 			<div class = "spacer"></div>
-			<div data-aos ="zoom-in">
+			<div data-aos ="zoom-in" >
 			<div  class="item">
 				<img class="card-img" src="/images/cards/1.jpg" alt="Card image">
 			</div>
 			</div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item p-3 text-left" style="background-color: blue;">
 				<blockquote class="blockquote mb-0">
 					<h2 class="white">A computer would deserve to be called intelligent if it could deceive a human into believing that it was human.</h2>
@@ -199,12 +199,12 @@
 				</blockquote>
             </div>
 			</div>
-			<div data-aos ="zoom-in" >
+			<div data-aos ="zoom-in"  >
 			<div  class="item">
 				<img class="card-img" src="/images/moviePoster.jpg" alt="Card image cap">
 			</div>
             </div>
-            <div data-aos ="zoom-in" >
+            <div data-aos ="zoom-in"  >
 			<div  class="item">
 				<img class="card-img" src="/images/turing2.jpg" alt="Card image cap">
 			</div>
@@ -258,9 +258,9 @@
         </div>
         
 	</section>
-	
+	  
   <script>
-    AOS.init();
+
   </script>
 </body>
 </html>
